--- a/Manuscript/PTMsMODaBibliography.bib
+++ b/Manuscript/PTMsMODaBibliography.bib
@@ -624,5 +624,14 @@ Christopher, J. Marx and M. Stephen Trent and Jeffrey E. Barrick and Edward M. M
    number = {1-2},
    pages = {531-9},
    year = {2003} }
+   
+   @article{Guptaetal2007,
+   author = {Gupta, N. and Tanner, S. and Jaitly, N. and Adkins, J. N. and Lipton, M. and Edwards, R. and Romine, M. and Osterman, A. and Bafna, V. and Smith, R. D. and Pevzner, P. A.},
+   title = {Whole proteome analysis of post-translational modifications: applications of mass-spectrometry for proteogenomic annotation},
+   journal = {Genome Res},
+   volume = {17},
+   number = {9},
+   pages = {1362-77},
+      year = {2007} }
 
 
