--- a/Manuscript/PTMsMODa.tex
+++ b/Manuscript/PTMsMODa.tex
@@ -65,7 +65,7 @@ How do the post-translational modifications [PTMs] change over time during micro
 
 Mass-spectrometry based proteomics \cite{Lamondetal2012} offers a unique way to characterize different post-translational modifications [PTMs] associated with proteins. PTMs are key in determining protein function, localization and regulation. Hundreds of PTMs are known \emph{in vivo}, however most of the current studies focus on identifying only few PTMs from mass-spec data. This is both because of computational limitations as well as the inefficiency of enrichment techniques to characterize or identify all PTMs. However with the improvement of search algorithms for an unrestricted search of PTMs, identifying multiple PTMs in \emph{tandem} has become a possibility. In this work, we used MODa \cite{Naetal2012}, a naive based spectral alignment algorithm to do an unrestricted search of PTMs from mass-spectrometry based proteomics data in \emph{E. coli} REL606 strain.
 
-In a typical mass-spectrometry based proteomics experiment, proteins are first digested into peptides and then the sample is enriched for any PTMs of interest. This sample is then analyzed by mass-spectrometry. Peptide search algorithms are then run on this mass-spectrometry data to computationally identify peptides and PTMs associated with it. These search algorithms generally fall into 3 categories: (1) Sequence or database search algorithms, (2) de novo sequence search and (3) Hybrid approach that is a mixture of partial de novo search followed by a database search. Most of the current search algorithms such as Mascot\cite{Perkinsetal1999}, Sequest \cite{Engetal1994}, OMSSA \cite{Geeretal2004}, X!Tandem \cite{CraigBeavis2004} search for only few variable modifications, i.e., oxidation of methionine etc or a small targeted list of PTMs. This technique of restricted search reduces the size of the database to search and hence alleviates lot of computational limitations \cite{McHughArthur2008}. Even though few of these algorithms report an option to do an unrestricted search, there are very few studies that reported an unrestricted search of PTMs using these algorithms. However, recently, software for unrestricted search of PTMs is starting to be available. MODa \cite{Naetal2012} is one such unrestricted search engine, along with others such as TagRecon\cite{Dasarietal2010} and Byonic \cite{Bernetal2012}. We used MODa, a spectral alignment algorithm that uses dynamic programming to identify small mass-tags and then join them reporting the delta masses between these mass tags. MODa is being used frequently to do an unrestricted search and identify novel PTMs. Some of the studies that used MODa either looked at particular PTM \textbf{WHAT} \cite{Kimetal2014}, or looked at wider coverage of PTMs such as \cite{Liuetal2013}. Here we used MODa, first to do an unrestricted search to identify frequently occuring mass-shifts and focussed on the PTMs that seem abundant in this data or being reported to be critical with \emph{E. coli}. 
+In a typical mass-spectrometry based proteomics experiment, proteins are first digested into peptides and then the sample is enriched for any PTMs of interest. This sample is then analyzed by mass-spectrometry. Peptide search algorithms are then run on this mass-spectrometry data to computationally identify peptides and PTMs associated with it. These search algorithms generally fall into 3 categories: (1) Sequence or database search algorithms, (2) de novo sequence search and (3) Hybrid approach that is a mixture of partial de novo search followed by a database search. Most of the current search algorithms such as Mascot\cite{Perkinsetal1999}, Sequest \cite{Engetal1994}, OMSSA \cite{Geeretal2004}, X!Tandem \cite{CraigBeavis2004} search for only few variable modifications, i.e., oxidation of methionine etc or a small targeted list of PTMs. This technique of restricted search reduces the size of the database to search and hence alleviates lot of computational limitations \cite{McHughArthur2008}. Even though few of these algorithms report an option to do an unrestricted search, there are very few studies that reported an unrestricted search of PTMs using these algorithms. However, recently, software for unrestricted search of PTMs is starting to be available. MODa \cite{Naetal2012} is one such unrestricted search engine, along with others such as TagRecon\cite{Dasarietal2010} and Byonic \cite{Bernetal2012}. We used MODa, a spectral alignment algorithm that uses dynamic programming to identify small mass-tags and then join them reporting the delta masses between these mass tags. MODa is being used frequently to do an unrestricted search and identify novel PTMs. Some of the studies that used MODa were able to identify novel post-translational modifications, for example, a study on urine proteomics by Liu et. al \cite{Liuetal2013} were able to identify different PTMs without an enrichment of these post-translational modifications. Here we used MODa, first to do an unrestricted search to identify frequently occuring mass-shifts and focussed on the PTMs that seem abundant in this data or being reported to be critical with \emph{E. coli}. 
 
 %Mapping the entire proteome involves mapping all the post-translational modifications on the proteins. This is a challenging goal, given the enrichment techniques for PTMs along with the computational search algorithms to identify these PTMs.
 %In the last decade, however there has been lot of effort to improve search algorithms to increase the coverage of PTMs i.e., using unrestricted approaches instead of traditional search, where a guessed list of only handful PTMs is provided beforehand.
@@ -161,13 +161,15 @@ We then looked at carboxylations (See Suppl Figure S3)and nitrosylations (See Su
 %{HIV-2 protease is inactivated after oxidation at the dimer interface and activity can be partly restored with methionine sulphoxide reductase}
 %Next, we looked into oxidation of proteins. This is an important modification that has been linked to various diseases, along with a primary cause in aging (cite). Oxidation frequently occurs on cysteine and methionine and also has been shown to occur relatively less frequently on few other amino acids. However in our sample, since cysteine is capped to avoid disulphide bond formation, we expect +16 Dalton oxidation modification to occur primarily on methionone (see Suppl Figure 6). 
 
-\emph{E. coli} grown aerobically react with oxygen in the atmosphere producing reactive oxygen species such as H2O2 \cite{GonzalezDemple1995}. Targets for these ROS are generally proteins and lipids, that get oxidized. This oxidized state affects the protein structure and hence results in changes in its function leading to disturbances in the metabolism. Bacteria have genetic systems that responds to this oxidative stress through oxyR, SoxXY etc or through reductases that reduce protein to its original non-oxidized state. Here, we investigated the levels of oxidation at different phases of growth.
+\emph{E. coli} grown aerobically react with oxygen in the atmosphere producing reactive oxygen species such as H2O2 \cite{GonzalezDemple1995}. Targets for these ROS are generally proteins and lipids, that get oxidized. This oxidized state affects the protein structure and hence results in changes in its function leading to disturbances in the metabolism. Bacteria have genetic systems that responds to this oxidative stress through oxyR, SoxXY etc and more generally through reductases that reduce protein to its original non-oxidized state. These reductases where shown to play a criticial role in protection of proteins against oxidative stress in the past \cite{Vogt1995}. Here, we investigated the levels of oxidation during the different phases of growth, reductase enzyme levels along with identifying the protein targets of oxidation.
 
-Oxidation frequently occurs on cysteine and methionine and also has been shown to occur relatively less frequently on few other amino acids. However in our sample, since cysteine is capped to avoid disulphide bond formation, we expect +16 Dalton oxidation modification to occur primarily on methionone (see Suppl Figure 6), which is the case. We plotted both the global oxidation levels and the methionine oxidation levels. Figure~\ref{fig:Oxid} (A) shows the global oxidation levels occuring on all amino acids. The oxidations seem to go down from exponential to stationary to long stationary phases. Figure~\ref{fig:Oxid} (B) shows the oxidation occuring on methionine only. The pattern seems to be same as the global oxidation level i.e., goes down from exponential to stationary phases. Since oxidative stress during stationary phase leads to accumulation of ROS, we expected the oxidation level to go up from exponential to stationary phases. However, the observed trend is opposite to what we expected. There could be 2 possible explanations (1) Either the level of methionines went up from exponential to stationary phases and/or (2) \emph{E. coli's} bacterial genetic system is acting to bring the oxidation levels down to protect against this oxidative damage. The number of methionines seemed more or less constant during the entire time course (data not shown). To see if \emph{E. coli} machinery is responding, we looked into literature to find any such reductases that fix methionine sulfoxide (MetSO) back to methionine (Met).  There seems to be 2 such reductases, MsrA and yeaA, In \emph{E. coli} REL606 strain.Since MODa also outputs the peptide and hence the protein level information, we plotted the protein abundances of these reductases in Figure~\ref{fig:MsrAB}. There seems to be a sudden increase in these levels during stationary and long-stationary phases that might explain the lower levels of methionine oxidation levels. We also validated this result using our previous work \cite{Houseretal2015} on protein level analysis on this data using Sequest, a different search engine. A point to note is that we  could not use the previous search results for our multiple PTM analysis here, as the only variable modification used in that study is oxidation methionine. The Sequest result is shown as a fig:SequestMODaFig (see Suppl Figure 7).
+Oxidation frequently occurs on cysteine and methionine and also has been shown to occur relatively less frequently on few other amino acids. However in a typical mass-spectrometry experiment, the cysteines are capped to avoid disulphide bond formation. Hence, in our analysis, we expect to see lot of methionine oxidation. To validate this, we plotted the frequencies of mass-shifts occuring on different amino acids possible. Suppl Figure 6 shows this profile. It is clear from this amino acid profile that methionine oxidation is the frequent one.
 
-Then we looked at the protein oxidation targets at these different points of time curve Alkyl hydroperoxide reductase subunit, elongation factor Tu, chaperonin GroEL, S-methyltransferase, cytochrome d ubiquinol oxidase, elongation factor G, phosphoribosylaminoimidazole-succinocarboxamide synthase were found to be the major oxidation targets. Some of these were not shown previously to be oxidation targets. Most of the proteins were also seem to be oxidized at later stages of growth i.e., during stationary and late-stationary phases. The supplementary data lists all the proteins along with their frequencies at all the time points of growth. A separate supplementary information also lists that the peptides that were seem to be oxidized.
+Next, we looked at the time-course of these oxidation levels. We plotted both the global oxidation levels (i.e., oxidation occuring on all amino acids) as well as oxidation levels of only methionine. Figure~\ref{fig:Oxid} (A) shows the global oxidation levels occuring on all amino acids. The oxidations seem to go down from exponential to stationary to long stationary phases. Figure~\ref{fig:Oxid} (B) shows the oxidation occuring on methionine only. The pattern seems to be same as the global oxidation level i.e., goes down from exponential to stationary phases. Since oxidative stress during stationary phase leads to accumulation of reactive oxygen species (ROS), we expected the oxidation levels to go up from exponential to stationary phases. However, the observed trend is opposite to what we expected. There could be 2 possible explanations (1) Either the level of methionines went up from exponential to stationary phases and/or (2) \emph{E. coli's} bacterial genetic system is acting to bring the oxidation levels down to protect against this oxidative damage. The number of methionines seemed more or less constant during the entire time course (data not shown). To see if \emph{E. coli} machinery is responding, we looked into literature to find any such reductases that fix methionine sulfoxide (MetSO) back to methionine (Met).  There seems to be 2 such reductases, MsrA \cite{Abramsetal1981} and MsrB \cite{Grimaudetal2001}, in \emph{E. coli}. yeaA is ortholog of MsrB in the REL606 strain. Since MODa also outputs the peptide and hence the protein level information, we plotted the protein abundances of these reductases in Figure~\ref{fig:MsrAB}. There seems to be a sudden increase in the levels of these proteins during stationary and long-stationary phases that might explain the lower levels of methionine oxidation levels. We also validated this result using our previous work \cite{Houseretal2015} on protein level analysis on this data using Sequest, a different protein identification search engine. A point to note is that we could not use the previous search results for our multiple PTM analysis here, as the only variable modification used in that study is oxidation methionine. The Sequest result is shown as a fig:SequestMODaFig (see Suppl Figure 7).
 
-One interesting modification that might be preventing the oxidation of methionine is the substitution of methionine to glutamine that seem to decrease from exponential to stationary phase.
+Then we looked at the protein oxidation targets at these different points of time course. Alkyl hydroperoxide reductase subunit, elongation factor Tu, chaperonin GroEL, S-methyltransferase, cytochrome d ubiquinol oxidase, elongation factor G, phosphoribosylaminoimidazole-succinocarboxamide synthase were found to be the major oxidation targets. Some of these were not shown previously to be oxidation targets. Most of the proteins were also seem to be oxidized at later stages of growth i.e., during stationary and late-stationary phases. The supplementary data lists all the proteins along with their frequencies at all the time points of growth. A separate supplementary information also lists that the peptides that were seem to be oxidized.
+
+One of the mass-shifts that seem dominant and occur primarily is -2 Da mass-shift on methionine. In Unimod, this was reported as methionine to glutamine substitution. An alternate description given in unimod is that it could be misacylation of the tRNA. However, to cope up dealing with the oxidative stress, methionine substitution to glutamine might be an alternate way for \emph{E. coli} to not let protein being oxidized. However, this substitution decreases from exponential to stationary phase (see Suppl Figure), probably suggesting other likely role.
 
 \subsection{Other PTMs and artifacts}
 %\textbf{CB Comment: Is this the Weinert et al succinylation paper?  Weren't there lots of targets identified?}
